<resources>
    <string name="app_name">Book Share</string>
    <string name="book_share">Book Share</string>
    <string name="password">Password ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="login_your_details">Login your details!</string>
</resources>