<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_login_backgroud"
    tools:context=".features.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/book_share"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/switch_tumbs"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/btnLoginLayout"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/switch_tricks"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/log_in"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="15sp"
                        android:textStyle="bold|normal"
                        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintButtonSize,TextContrastCheck" />

                    <Button
                        android:id="@+id/btnSignupLayout"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/nullColor"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/sign_up"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="#EF6C00"
                        android:textSize="15sp"
                        android:textStyle="bold|normal"
                        tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize,DuplicateSpeakableTextCheck" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logInLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20px"
                    android:layout_marginBottom="50px"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="25dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="5dp"
                    tools:ignore="PxUsage">

                    <com.google.android.material.textfield.TextInputLayout
                        style="style/widget.MaterialComponents.TextInputLayout.OutLinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/username"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:shapeAppearanceOverlay="@style/ButtonTextFields">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputLoginUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="style/widget.MaterialComponents.TextInputLayout.OutLinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="password_toggle"
                        app:shapeAppearanceOverlay="@style/ButtonTextFields">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputLoginPasswords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/btnCheckBok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/remember_me"
                        android:textColor="#474545"
                        tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/btnLogIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="@string/log_in"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:backgroundTint="@color/textOrange"
                        app:shapeAppearanceOverlay="@style/ButtonStyle"
                        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Forgot"
                            android:textAlignment="viewEnd"
                            tools:ignore="HardcodedText,TextContrastCheck" />

                        <TextView
                            android:id="@+id/tvForgotPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:text="@string/password"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/textOrange"
                            android:textStyle="normal"
                            tools:ignore="TextContrastCheck" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signUpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="25dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="5dp"
                    android:visibility="gone"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputLayout
                        style="style/widget.MaterialComponents.TextInputLayout.OutLinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/email"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:shapeAppearanceOverlay="@style/ButtonTextFields">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputSignUpEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="style/widget.MaterialComponents.TextInputLayout.OutLinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="Full Name"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:shapeAppearanceOverlay="@style/ButtonTextFields"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputSignUpUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="style/widget.MaterialComponents.TextInputLayout.OutLinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="password_toggle"
                        app:shapeAppearanceOverlay="@style/ButtonTextFields">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputSignUpPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="VisualLintTextFieldSize" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="5dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:backgroundTint="@color/textOrange"
                        app:shapeAppearanceOverlay="@style/ButtonStyle"
                        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/login_your_details" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>